# conversation-without-large-corpus-files

./: .gitignore  .gitmodules  CMakeLists.txt
3rd/mteval/mteval/: Dictionary.cc  utils.h
data/: black-list.txt  config.ini
src/single_turn_conversation/: bleu.h  custom_exceptions.h  data_manager.h  def.h  default_config.h  distinct.h  main.cc  perplex.h
src/single_turn_conversation/components/: UpperTrangularMatrix.h  upper_triangular_matrix.h
src/single_turn_conversation/encoder_decoder/: decoder_components.h  graph_builder.h  hyper_params.h  model_params.h
